# scrap3

./: .gitignore  .gitmodules  Cargo.toml  bench.sh  clippy.toml  flamegraph.sh  shell.nix  test  tree.txt  wasm.sh
.cargo/: config.toml
asset_macro/: Cargo.toml
asset_macro/src/: lib.rs
egui-tweak/: Cargo.toml
egui-tweak/src/: display.rs  editor.rs  lib.rs  slider.rs  tweakables.rs  ui.rs
game/: Cargo.toml
game/js/: game.js  index.html
game/mod/: settings.json
game/mod/colors/: blue.json  color1.json  color2.json  dark.json  green.json  heal.json  light.json  red.json
game/src/: board.rs  getrandom_on_web.rs  main.rs  state.rs  ui.rs  user_textures.rs
game/src/board/: board.rs  board_anim.rs  gem.rs  state.rs
game/src/state/: combat.rs
game/src/state/combat/: anim.rs  board.rs  gem.rs
game/src/ui/: board.rs
game/src/ui/board/: anim.rs
game_comfy/: Cargo.toml
game_comfy/src/: assets.rs  main.rs  ui.rs
luck/: Cargo.toml
luck/src/: chances.rs  lib.rs  pool.rs
match3/: Cargo.toml
match3/benches/: match3.rs
match3/src/: char_board.rs  lib.rs  line.rs  rect_board.rs  refilling.rs  tests.rs
match3/src/cases/: different_types.txt  empty_board.txt  horizontal_line.txt  incomplete_horizontal_line.txt  incomplete_vertical_line.txt  intersecting_groups.txt  valid_h_invalid_v.txt  valid_v_invalid_h.txt  vertical_line.txt
match3/src/cases/common/: combine_neighbours.txt  different_types.txt  dont_combine_neighbours.txt  empty_board.txt  horizontal_line.txt  middle_of_a_line.txt  separate_groups.txt  vertical_line.txt
match3/src/cases/gravity/: one_gem.txt  one_gem_on_larger_field.txt  should_fall_in_place_after_match.txt
match3/src/cases/sizing/: group_size.txt  small_line.txt  small_merge.txt  under_group_size.txt
match3/src/cases/wildcard/: different_types.txt  divergent_failcase.txt  horizontal.txt  merge_and_different.txt  merge_groups.txt  no_standalone.txt  overflow_failcase.txt  vertical.txt
match3/src/snapshots/: match3__tests__Horizontal line.snap  match3__tests__Incomplete horizontal line.snap  match3__tests__Incomplete vertical line.snap  match3__tests__Vertical line.snap  match3__tests__combine_neighbours.txt.snap  match3__tests__common__combine_neighbours.txt.snap  match3__tests__common__different_types.txt.snap  match3__tests__common__dont_combine_neighbours.txt.snap  match3__tests__common__empty_board.txt.snap  match3__tests__common__horizontal_line.txt.snap  match3__tests__common__incomplete_horizontal_line.txt.snap  match3__tests__common__incomplete_vertical_line.txt.snap  match3__tests__common__intersecting_groups.txt.snap  match3__tests__common__middle_of_a_line.txt.snap  match3__tests__common__separate_groups.txt.snap  match3__tests__common__valid_h_invalid_v.txt.snap  match3__tests__common__valid_v_invalid_h.txt.snap  match3__tests__common__vertical_line.txt.snap  match3__tests__different_types.txt.snap  match3__tests__dont_combine_neighbours.txt.snap  match3__tests__empty_board.txt.snap  match3__tests__horizontal_line.txt.snap  match3__tests__incomplete_horizontal_line.txt.snap  match3__tests__incomplete_vertical_line.txt.snap  match3__tests__intersecting_groups.txt.snap  match3__tests__middle_of_a_line.txt.snap  match3__tests__separate_groups.txt.snap  match3__tests__sizing__group_size.txt.snap  match3__tests__sizing__one_gem.txt.snap  match3__tests__sizing__one_gem_on_larger_field.txt.snap  match3__tests__sizing__should_fall_in_place_after_match.txt.snap  match3__tests__sizing__small_line.txt.snap  match3__tests__sizing__small_merge.txt.snap  match3__tests__sizing__under_group_size.txt.snap  match3__tests__valid_h_invalid_v.txt.snap  match3__tests__valid_v_invalid_h.txt.snap  match3__tests__vertical_line.txt.snap  match3__tests__wildcard__different_types.txt.snap  match3__tests__wildcard__divergent_failcase.txt.snap  match3__tests__wildcard__horizontal.txt.snap  (+5 more)
math/: Cargo.toml
math/proptest-regressions/: lib.txt
math/src/: arc.rs  board.rs  gravity.rs  lib.rs  lib_ext.rs
model/: Cargo.toml
model/src/: lib.rs  loading.rs  registry.rs
model/src/assets/: color.rs  sprite.rs
model/src/collections/: actions.rs  gem.rs
model/src/loading/: staggerer.rs
model/src/singletons/: settings.rs
rect/: Cargo.toml
rect/src/: lib.rs
with_setter_macro/: Cargo.toml
with_setter_macro/src/: lib.rs
yakui_tweak/: Cargo.toml
yakui_tweak/src/: display.rs  editor.rs  lib.rs  slider.rs  tweakables.rs  ui.rs
yakui_widgets_plus/: Cargo.toml
yakui_widgets_plus/src/: collapsing.rs  lib.rs  list_ext.rs  pad_ext.rs  vertical_divider.rs
