[package]
name = "egui-tweak"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = { workspace = true }
duplicate = { workspace = true }
egui = { workspace = true }

[features]
release-tweak = []
