[package]
name = "game"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset_macro = { path = "../asset_macro" }
comfy = { workspace = true }
egui-tweak = { path = "../egui-tweak", features = ["slider"] }
enum_decompose = { workspace = true }
fs-err = { workspace = true }
inline_tweak = { workspace = true, features = ["derive"] }
match3 = { path = "../match3" }
math = { path = "../math" }
ndshape = { workspace = true }
rect = { path = "../rect", features = ["glam"] }
tinyrand = { workspace = true }
tinyrand-std = { workspace = true }
with_setter_macro = { path = "../with_setter_macro" }
