[package]
name = "game"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_decompose = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
macroquad = { workspace = true }
miette = { workspace = true, features = ["fancy-no-syscall"] }
model = { workspace = true }
thiserror = { workspace = true }
yakui = { workspace = true }
yakui-macroquad = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[lints]
workspace = true
