[package]
name = "match3"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
ndshape = { workspace = true }
nohash-hasher = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
colored = { workspace = true }
insta = { workspace = true }
proptest = "1.4.0"
regex = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json5 = { workspace = true }
