[package]
name = "match3"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { workspace = true, optional = true }
itertools = { workspace = true }
ndshape = { workspace = true }
nohash-hasher = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = { workspace = true }
match3 = { path = ".", features = ["char-board"] }
proptest = "1.4.0"
regex = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json5 = { workspace = true }
tinyrand = "0.5.0"

[features]
char-board = ["dep:colored"]

[[bench]]
name = "match3"
harness = false
