[package]
name = "match3"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { workspace = true, optional = true }
enum_decompose = { workspace = true }
itertools = { workspace = true }
lockfree-object-pool = { workspace = true }
ndshape = { workspace = true }
nohash-hasher = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true }
match3 = { path = ".", features = ["char-board"] }
proptest = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json5 = { workspace = true }
tinyrand = { workspace = true }

[features]
char-board = ["dep:colored"]

[[bench]]
name = "match3"
harness = false
