[package]
name = "math"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { workspace = true }
glamour = { workspace = true }
libm = { workspace = true }
ndshape = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
tinyrand = { workspace = true }
tinyrand-std = { workspace = true }

[lints]
workspace = true
